--- a/legacy.tex
+++ b/legacy.tex
@@ -278,11 +278,12 @@ On a technical front, we were surprised that strong association between SNPs and
 The genome wide simple logistic regression analysis approach is rather straightforward, and could be a standard in a variety of -omics studies. 
 
 More generally, to improve the quality of genomic reference datasets, we can proceed by addition of new and better data and by better curation of existing data.
-Given rapid technological progress, the focus of genomic research is naturally on the data generation side. However, cleaning up data is also important to avoid generating spurious results. 
-The present findings suggest that a substantial fraction of the final release of the 1kGP project is overdue for removal or re-sequencing. 
+Given rapid technological progress, the focus of genomic research is naturally on the data generation side. 
+However, cleaning up data is also important to avoid generating spurious results. 
+The present findings suggest that a substantial fraction of the final release of the 1kGP project is overdue for removal or re-sequencing.
 
 We have not identified the precise mechanism through which the technical artifact was introduced: we have ruled out neither cell-line, sequencer, nor algorithmic artifact. 
-Given that modern platforms seem to have resolved this technical issue but that recent studies continue to be affected by the legacy batch effect, we found it worthwhile to draw attention to the statistical artefact while the sequencing forensics investigation can take place.     
+Given that modern platforms seem to have resolved this technical issue but that recent studies continue to be affected by the legacy batch effect, we found it worthwhile to draw attention to the statistical artefact while the sequencing forensics investigation can take place. 
 
 
 \section{Methods}
